<resources>
    <string name="app_name">iQueCommerce</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">666570610158864</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Still have no account? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_already_an_account_log_in">Already have an account? Log in!</string>
    <string name="user_name">User name</string>
    <string name="import_title">Import</string>
    <string name="gallery_title">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="log_out">Log out</string>
    <string name="user_email_com">user@email.com</string>
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_invalid_email">Invalid email</string>
    <string name="exception_message_invalid_name">Invalid name</string>
    <string name="exception_message_invalid_ip_address">Invalid IP address</string>
    <string name="exception_message_invalid_password">Invalid password</string>
    <string name="exception_message_invalid_web_url">Invalid web URL</string>
    <string name="exception_message_empty_field">This field is required</string>
    <string name="title_activity_primary">PrimaryActivity</string>
    <string name="splash_image">splash image</string>

    <string name="category_image">category_image</string>
    <string name="title_activity_category">Category Activity</string>
    <string name="product_image">product_image</string>
    <string name="product_title">Product title</string>
    <string name="product_price">Product price</string>
    <string name="add">ADD</string>
    <string name="product_description">Product description</string>
    <string name="cart">Cart</string>
    <string name="listview">ListView</string>
    <string name="total">Total:</string>
    <string name="btn_continue">Continue</string>
    <string name="about_us">About us</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="icon">icon</string>
    <string name="remember_me">Remember me</string>
    <string name="share_image">share_image</string>
    <string name="favourites_image">favourites image</string>
    <string name="more">more</string>
    <string name="search">Search</string>
    <string name="close_image">close image</string>
    <string name="chevron">chevron</string>
    <string name="discount">Discount</string>
    <string name="enter_yoou_coupon_here">Enter your coupon here</string>
    <string name="apply_coupon">APPLY COUPON</string>
    <string name="account_settings">Account settings</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="OK">OK</string>
    <string name="customer_information">Customer information</string>
    <string name="edit">Edit</string>
    <string name="shipping_address">Shipping address</string>
    <string name="billing_address">Billing address</string>
    <string name="title_account_settings">Account settings</string>
    <string name="phone_number">Phone number</string>
    <string name="credit_card_information">Credit card information</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="expiration_date">Expiration date</string>
    <string name="slash_symbol">/</string>
    <string name="verification_code">CVVC2/CVC2</string>
    <string name="proceed">Proceed</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="update_shipping_address">Update shipping address</string>
    <string name="update_billing_address">Update billing address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal / ZIP Code</string>
    <string name="address">Address</string>
    <string name="wish_list">Wish list</string>
    <string name="contact_us">Contact us</string>
    <string name="main">Main</string>
    <string name="favourites">Favourites</string>
    <string name="track_my_order">Track my order</string>
    <string name="my_orders">My orders</string>
    <string name="faq">FAQ</string>
</resources>
