<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="2dp"
                                    android:orientation="vertical"
                                    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_124sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:contentDescription="@string/product_image" />

        <TextView
            android:id="@+id/tv_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_product_image"
            android:layout_margin="4dp"
            android:maxLines="3"
            android:text="@string/product_title"
            android:textSize="@dimen/textMedium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/tv_product_title"
            android:layout_gravity="bottom"
            android:padding="@dimen/spacing_4dp">

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/product_price"
                android:textSize="@dimen/textMedium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_oval"
                android:text="@string/add" />

        </RelativeLayout>
    </RelativeLayout>


</android.support.v7.widget.CardView>