<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <include layout="@layout/view_progress"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/splash_image"/>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom">

        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/mail_ic"
                android:contentDescription="@string/icon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/textMedium" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_email"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/lock_icon"
                android:contentDescription="@string/icon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/textMedium" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/chb_remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_password"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:checked="false"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/remember_me"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textMedium"
            android:visibility="invisible"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/chb_remember_me"
            android:layout_marginBottom="@dimen/buttons_margin"
            android:layout_marginTop="@dimen/buttons_margin"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/textLarge" />


        <TextView
            android:id="@+id/tvGoToSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:shadowRadius="3"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textSmall" />
    </RelativeLayout>

</RelativeLayout>