<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/spacing_8dp">


    <TextView
        android:id="@+id/tv_credit_card_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:text="@string/credit_card_information"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/textLarge" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_credit_card_info"
        android:layout_marginTop="@dimen/spacing_4dp"
        android:background="@color/colorPrimary" />


    <LinearLayout
        android:id="@+id/ll_CreditCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/ic_credit_card"
            android:contentDescription="@string/icon"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilCreditCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCreditCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/credit_card_number"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="19"
                android:maxLines="1"
                android:textSize="@dimen/textMedium" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_CreditCardHolderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_CreditCardNumber"
        android:layout_marginLeft="@dimen/spacing_8dp"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/ic_first_name"
            android:contentDescription="@string/icon" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilCreditCardHolderFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCreditCardHolderFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLength="16"
                android:maxLines="1"
                android:textSize="@dimen/textMedium" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilCreditCardHolderLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCreditCardHolderLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLength="16"
                android:maxLines="1"
                android:textSize="@dimen/textMedium" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_CreditCardHolderName"
        android:layout_marginTop="@dimen/spacing_12dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiration_date"
                android:textSize="@dimen/textMedium" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilCreditCardExpirationMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etCreditCardExpirationMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="@string/mm"
                        android:inputType="date"
                        android:lines="1"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:minEms="2"
                        android:textSize="@dimen/textMedium" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash_symbol"
                    android:textSize="@dimen/textMedium" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilCreditCardExpirationYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etCreditCardExpirationYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="@string/yy"
                        android:inputType="date"
                        android:lines="1"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:minEms="2"
                        android:textSize="@dimen/textMedium" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_4dp"
                android:text="@string/verification_code"
                android:textSize="@dimen/textMedium" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCreditCardVerificationNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etCreditCardVerificationNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="date"
                    android:lines="1"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:minEms="3"
                    android:textSize="@dimen/textMedium" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/spacing_16dp"
        android:background="@color/colorPrimary"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:textSize="@dimen/textLarge" />

    <include layout="@layout/view_progress" />
</RelativeLayout>